<resources>
    <string name="app_name">Pedidos Cafeteria</string>
    <string name="usuario">Nombre de Usuario</string>
    <string name="password">Contraseña</string>
    <string name="login">Acceder</string>
    <string name="register">Registrarse</string>
    <string name="fillDB">Llenar con usuarios</string>
    <string name="cleantext">Limpiar texto</string>
    <string name="usertype">Tipo de usuario</string>
    <string-array name="usertypes">
        <item>Empleado</item>
        <item>Encargado de local</item>
    </string-array>
    <string name="button_details_empleado">Gestionar datos de empleado</string>
    <string name="button_details_pedido">Gestionar datos de los pedidos</string>
    <string name="button_details_local">Ver locales</string>
    <string name="button_facultad">Gestionar facultad</string>
    <string name="button_ubicacion">Gestionar ubicacion</string>
    <string name="button_empleado">Gestionar empleado</string>
    <string name="button_create_facultad">Insertar Facultad</string>
    <string name="button_read_facultad">Consultar Facultad</string>
    <string name="button_update_facultad">Actualizar Facultad</string>
    <string name="button_delete_facultad">Eliminar Facultad</string>
    <string name="codfacultad">Codigo de Facultad</string>
    <string name="nomfacultad">Nombre de Facultad</string>
    <string name="button_create_ubicacion">Insertar Ubicacion</string>
    <string name="button_read_ubicacion">Consultar Ubicacion</string>
    <string name="button_update_ubicacion">Actualizar Ubicacion</string>
    <string name="button_delete_ubicacion">Eliminar Ubicacion</string>
    <string name="codubicacion">Codigo de la ubicacion</string>
    <string name="descubicacion">Descripcion de la ubicacion exacta</string>
    <string name="button_create_empleado">Insertar Empleado</string>
    <string name="button_read_empleado">Consultar Empleado</string>
    <string name="button_update_empleado">Actualizar Empleado</string>
    <string name="button_delete_empleado">Eliminar Empleado</string>
    <string name="codempleado">Codigo del empleado</string>
    <string name="nomempleado">Nombre del empleado</string>
    <string name="apeempleado">Apellido del empleado</string>
    <string name="telempleado">Telefono del empleado</string>
    <string name="correoempleado">Correo del empleado</string>
    <string name="button_details_encargado_local">Gestionar Encargados de Locales</string>
    <string name="button_details_crud_local">Gestionar Locales</string>
    <string name="button_details_menu">Gestionar Menus</string>
    <string name="button_details_producto">Gestionar Productos</string>
    <string name="button_details_pedidos">Gestionar Pedidos</string>
    <string name="button_details_ruta">Gestionar rutas de los pedidos</string>
    <string name="button_details_repartidor">Gestionar repartidores</string>
    <string name="button_create_encargadolocal">Insertar Encargado de Local</string>
    <string name="button_read_encargadolocal">Consultar Encargado de Local</string>
    <string name="button_update_encargadolocal">Actualizar Encargado de Local</string>
    <string name="button_delete_encargadolocal">Eliminar Encargado de Local</string>
    <string name="codencargadolocal">Codigo del encargado del local</string>
    <string name="nomencargadolocal">Nombre del encargado del local</string>
    <string name="apeencargadolocal">Apellido del encargado del local</string>
    <string name="telencargadolocal">Telefono del encargado del local</string>
    <string name="button_create_local">Insertar Local</string>
    <string name="button_read_local">Consultar Local</string>
    <string name="button_update_local">Actualizar Local</string>
    <string name="button_delete_local">Eliminar Local</string>
    <string name="codlocal">Codigo del local</string>
    <string name="nomlocal">Nombre del local</string>
    <string name="button_create_menu">Insertar Menu</string>
    <string name="button_read_menu">Consultar Menu</string>
    <string name="button_update_menu">Actualizar Menu</string>
    <string name="button_delete_menu">Eliminar Menu</string>
    <string name="codmenu">Codigo del Menu</string>
    <string name="preciomenu">Precio del Menu</string>
    <string name="fechadesdemenu">Fecha inicial del Menu</string>
    <string name="fechahastamenu">Fecha final del Menu</string>
    <string name="button_create_producto">Insertar Producto</string>
    <string name="button_read_producto">Consultar Producto</string>
    <string name="button_update_producto">Actualizar Producto</string>
    <string name="button_delete_producto">Eliminar Producto</string>
    <string name="button_table_cambioprecios">Cambios de precios</string>
    <string name="select_from_spinner">Seleccione el correspondiente</string>
    <string name="codproducto">Codigo del producto</string>
    <string name="nombreproducto">Nombre del producto</string>
    <string name="preciounitario">Precio unitario</string>
    <string name="title_activity_lista_locales">ListaLocalesActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_detalle_producto">DetalleProductoActivity</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="button_create_repartidor">Insertar Repartidor</string>
    <string name="button_read_repartidor">Consultar Repartdor</string>
    <string name="button_update_repartidor">Actualizar Repartidor</string>
    <string name="button_delete_repartidor">Eliminar Repartidor</string>
    <string name="button_create_ruta">Insertar ruta del pedido</string>
    <string name="button_read_ruta">Consultar ruta del pedido</string>
    <string name="button_update_ruta">Actualizar ruta del pedido</string>
    <string name="button_delete_ruta">Eliminar ruta del pedido</string>
</resources>