<TableLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="LabelFor">
    <TableRow>
    <Button
        android:id="@+id/btnEncargadoLocal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_details_encargado_local" />
    </TableRow>
    <TableRow>
    <Button
        android:id="@+id/btnLocales"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_details_crud_local" />
    </TableRow>
    <TableRow>
    <Button
        android:id="@+id/btnPedido"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_details_pedidos"/>
    </TableRow>
    <TableRow>
    <Button
        android:id="@+id/btnProducto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_details_producto" />
    </TableRow>
    <TableRow>
    <Button
        android:id="@+id/btnMenus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_details_menu" />
    </TableRow>
    <TableRow>
    <Button
        android:id="@+id/btnRepartidor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_details_repartidor" />
    </TableRow>
    <TableRow>
    <Button
        android:id="@+id/btnRutas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_details_ruta" />
    </TableRow>
</TableLayout>