<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LocalMenuActivity">

    <Button
        android:id="@+id/btnIngresarLocal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="90dp"
        android:text="@string/button_create_local"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnActualizarLocal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:text="@string/button_update_local"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnIngresarLocal" />

    <Button
        android:id="@+id/btnConsultarLocal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:text="@string/button_read_local"
        app:layout_constraintTop_toBottomOf="@+id/btnActualizarLocal"
        tools:layout_editor_absoluteX="-16dp" />

    <Button
        android:id="@+id/btnEliminarLocal"
        android:layout_width="411dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:text="@string/button_delete_local"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnConsultarLocal" />
</androidx.constraintlayout.widget.ConstraintLayout>