<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DatosEmpleadoMenuActivity">

    <Button
        android:id="@+id/btnIngresarEmpleado"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="110dp"
        android:text="@string/button_create_empleado"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnActualizarEmpleado"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:text="@string/button_update_empleado"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnIngresarEmpleado" />

    <Button
        android:id="@+id/btnConsultarEmpleado"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:text="@string/button_read_empleado"
        app:layout_constraintTop_toBottomOf="@+id/btnActualizarEmpleado"
        tools:layout_editor_absoluteX="-16dp" />

    <Button
        android:id="@+id/btnEliminarEmpleado"
        android:layout_width="411dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:text="@string/button_delete_empleado"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnConsultarEmpleado" />
</androidx.constraintlayout.widget.ConstraintLayout>